--- a/Todo.Data/Todo.Data.csproj
+++ b/Todo.Data/Todo.Data.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Infrastructure\ApplicationDbContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Repositories\Base\BaseRepository.cs" />
     <Compile Include="EntityUnitOfWork.cs" />
     <Compile Include="Repositories\Base\IBaseRepository.cs" />
